# cc-mem-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
eval/: README.md  add_gold.py  gold.example.jsonl  gold.server-deploy.jsonl  recall_eval.py  reembed.py  run.example.cmd  run.example.sh
examples/: CLAUDE.snippet.md  hooks.postcompact.json  mcp.embedded.json  mcp.openai.json  mcp.shared-server.json
hooks/: README.md  postcompact.cmd.example  postcompact.sh.example
src/cc_mem_mcp/: __init__.py  __main__.py  categories.py  cli.py  config.py  embeddings.py  ingest.py  init.py  scan.py  server.py  store.py
